# flat-practice

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/graphblas/: Cargo.toml
lib/graphblas/src/: binary_op.rs  descriptor.rs  ffi.rs  lib.rs  matrix.rs  monoid.rs  semiring.rs  types.rs  unary_op.rs
lib/src/: automaton.rs  cfg.rs  dfa.rs  graph.rs  lib.rs  measure.rs  rfa.rs  syntax.cfg  syntax.rs
lib/src/py/: parse_cfg.py  read_cfg.py
lib/tests/: base.rs  cfg.rs  cfpq.rs  hellings.rs  syntax.rs  task02.rs  task04.rs
lib/tests/data/grammars/: grammar1  grammar2  operations
lib/tests/data/graphs/: graph2
lib/tests/data/scripts/: let
lib/tests/data04/: grammar3
lib/tests/util/: mod.rs
make/: get_graphblas.bash  get_rust.bash  has_graphblas.bash  has_rust.bash  set_paths.bash
measurement/: Report.ipynb  raw.csv
src/: main.rs  measure.rs
src/compute/: cfg.rs  dfa.rs  graph.rs  mod.rs  rfa.rs
src/compute/py/: read_cfg_in_cnf.py  regex_to_edges.py
src/ll/: algo.rs  chars.rs  dot.rs  mod.rs  parser.lalrpop
src/ll/algo/: mod.rs  tests.rs
src/syntax/: ast.rs  dot.rs  mod.rs  parser.lalrpop  syntax.cfg
test_data/grammars/: epsilon  grammar1  grammar3
test_data/graphs/: graph1
test_data/ll_grammars/: char  dyck  epsilon  expr
test_data/scripts/: complex  cond  get  inv_cond  inv_let  inv_open  inv_precedence  precedence
tests/: base.rs
