[package]
name = "flat-practice"
version = "0.1.0"
authors = ["Lev Malets <lev.mxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.12.4"
anyhow = "1.0.34"
graphblas = { path = "lib/graphblas" }
paste = "1.0.3"
lalrpop-util = "0.19.1"
lazy_static = "1.4.0"
clap = "3.0.0-beta.2"
serde_json = "1.0.61"
serde = { version = "1.0.120", features = ["derive"] }

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }
