[package]
name = "flat-practice-lib"
version = "0.1.0"
authors = ["Lev Malets <lev.mxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustomaton = { git = "https://github.com/lev-mxx/rustomaton" }
graphblas = { path = "graphblas" }
anyhow = "1.0.32"
