[package]
name = "flat-practice-lib"
version = "0.1.0"
authors = ["Lev Malets <lev.mxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.12.1"
anyhow = "1.0.32"
graphblas = { path = "graphblas" }
paste = "1.0.1"
